--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario 2</title>
+    <link rel="stylesheet" href="form.css">
 </head>
 
 <body>
@@ -44,7 +45,7 @@
             </div>
             <div>
                 <label for="site">Seu site</label>
-                <input type="url" name="site" id="site" required>
+                <input type="url" name="site" id="site" required> <br>
                 <label for="Senha">Senha</label>
                 <input type="password" id="senha" name="senha" required>
             </div>
@@ -56,7 +57,7 @@
                 <label for="filhos">Quantidade Filhos</label>
                 <input type="number" id="filhos" name="filhos">
             </div>
-            <div>
+            <div class="peso">
                 <label for="peso">Peso</label>
                 0 <input type="range" id="peso" name="peso" min="0" max="200"> 200
             </div>
@@ -68,12 +69,12 @@
                     <option value="PB">PB</option>
                 </select>
             </div>
-            <div>
+            <div class="radio">
                 <p>Grau de Estudo</p>
                 <input type="radio" id="medio" name="medio" value="Ensino Médio">
                 <label for="medio">Ensino Médio</label><br>
                 <input type="radio" id="faculdade" name="medio" value="Ensino Superior">
-                <label for="faculdade">Ensino Superior</label>
+                <label for="faculdade">Ensino Superior</label><br>
                 <input type="radio" id="mestrado" name="medio" value="Mestrado">
                 <label for="mestrado">Mestrado</label>
             </div>
